--- a/GesPresta/GesPresta.csproj
+++ b/GesPresta/GesPresta.csproj
@@ -69,11 +69,14 @@
   <ItemGroup>
     <Content Include="Cabecera.ascx" />
     <Content Include="Default.aspx" />
+    <Content Include="EmpleadosCalendar.aspx" />
     <Content Include="Empleados1.aspx" />
     <Content Include="Empleados.aspx" />
+    <Content Include="Prestaciones1.aspx" />
     <Content Include="Prestaciones.aspx" />
     <Content Include="Styles.css" />
     <Content Include="Web.config" />
+    <Content Include="Prestaciones1Respuesta.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cabecera.ascx.cs">
@@ -90,6 +93,13 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="EmpleadosCalendar.aspx.cs">
+      <DependentUpon>EmpleadosCalendar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EmpleadosCalendar.aspx.designer.cs">
+      <DependentUpon>EmpleadosCalendar.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Empleados1.aspx.cs">
       <DependentUpon>Empleados1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -104,6 +114,13 @@
     <Compile Include="Empleados.aspx.designer.cs">
       <DependentUpon>Empleados.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Prestaciones1.aspx.cs">
+      <DependentUpon>Prestaciones1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Prestaciones1.aspx.designer.cs">
+      <DependentUpon>Prestaciones1.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Prestaciones.aspx.cs">
       <DependentUpon>Prestaciones.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -112,6 +129,13 @@
       <DependentUpon>Prestaciones.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Prestaciones1Respuesta.aspx.cs">
+      <DependentUpon>Prestaciones1Respuesta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Prestaciones1Respuesta.aspx.designer.cs">
+      <DependentUpon>Prestaciones1Respuesta.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
