--- a/GesPresta/GesPresta.csproj
+++ b/GesPresta/GesPresta.csproj
@@ -72,8 +72,13 @@
     <Content Include="EmpleadosCalendar.aspx" />
     <Content Include="Empleados1.aspx" />
     <Content Include="Empleados.aspx" />
+    <Content Include="MPDefault.aspx" />
+    <Content Include="MPEmpleados.aspx" />
+    <Content Include="MPPrestaciones.aspx" />
+    <Content Include="Prestaciones2.aspx" />
     <Content Include="Prestaciones1.aspx" />
     <Content Include="Prestaciones.aspx" />
+    <Content Include="prestacionesBuscar.ascx" />
     <Content Include="Styles.css" />
     <Content Include="Web.config" />
     <Content Include="Prestaciones1Respuesta.aspx" />
@@ -114,6 +119,41 @@
     <Compile Include="Empleados.aspx.designer.cs">
       <DependentUpon>Empleados.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MasterPage.Master.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterPage.Master.designer.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
+    </Compile>
+    <Compile Include="MPDefault.aspx.cs">
+      <DependentUpon>MPDefault.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MPDefault.aspx.designer.cs">
+      <DependentUpon>MPDefault.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MPEmpleados.aspx.cs">
+      <DependentUpon>MPEmpleados.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MPEmpleados.aspx.designer.cs">
+      <DependentUpon>MPEmpleados.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MPPrestaciones.aspx.cs">
+      <DependentUpon>MPPrestaciones.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MPPrestaciones.aspx.designer.cs">
+      <DependentUpon>MPPrestaciones.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Prestaciones2.aspx.cs">
+      <DependentUpon>Prestaciones2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Prestaciones2.aspx.designer.cs">
+      <DependentUpon>Prestaciones2.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Prestaciones1.aspx.cs">
       <DependentUpon>Prestaciones1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -128,6 +168,13 @@
     <Compile Include="Prestaciones.aspx.designer.cs">
       <DependentUpon>Prestaciones.aspx</DependentUpon>
     </Compile>
+    <Compile Include="prestacionesBuscar.ascx.cs">
+      <DependentUpon>prestacionesBuscar.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="prestacionesBuscar.ascx.designer.cs">
+      <DependentUpon>prestacionesBuscar.ascx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Prestaciones1Respuesta.aspx.cs">
       <DependentUpon>Prestaciones1Respuesta.aspx</DependentUpon>
@@ -138,6 +185,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="MasterPage.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
